{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 105,
  "lineage": "17b8024f-74b3-f88a-7d4b-b31a7d65702a",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:security-group/sg-048819ecd8bb46ad6",
            "description": "Security group for my EKS cluster",
            "egress": [],
            "id": "sg-048819ecd8bb46ad6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ram-cluster-sg",
            "name_prefix": "",
            "owner_id": "368355641188",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bbd468cdcf09dde",
            "association_id": "eipassoc-0a9ad2539e14122ad",
            "domain": "vpc",
            "id": "eipalloc-07bbd468cdcf09dde",
            "network_border_group": "us-east-2",
            "network_interface": "eni-01185048d0e46c2b3",
            "private_dns": "ip-10-0-0-60.us-east-2.compute.internal",
            "private_ip": "10.0.0.60",
            "public_dns": "ec2-3-129-246-40.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.246.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ram-ecs-eip"
            },
            "tags_all": {
              "Name": "ram-ecs-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:internet-gateway/igw-07efe9554185d7d9a",
            "id": "igw-07efe9554185d7d9a",
            "owner_id": "368355641188",
            "tags": {
              "Name": "ram pubsub IG"
            },
            "tags_all": {
              "Name": "ram pubsub IG"
            },
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bbd468cdcf09dde",
            "association_id": "eipassoc-0a9ad2539e14122ad",
            "connectivity_type": "public",
            "id": "nat-0372a2f54880559dd",
            "network_interface_id": "eni-01185048d0e46c2b3",
            "private_ip": "10.0.0.60",
            "public_ip": "3.129.246.40",
            "subnet_id": "subnet-0bd14aeb7c8fd7fe1",
            "tags": {
              "Name": "ram-nat-gateway"
            },
            "tags_all": {
              "Name": "ram-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.pubsub1",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07efe9554185d7d9a",
            "id": "r-rtb-02e3f49496f2e7e1a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e3f49496f2e7e1a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.pubsub1_route",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07efe9554185d7d9a",
            "id": "r-rtb-043a707e2634fc5811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043a707e2634fc581",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.pubsub2_route",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0111b9ab5a76e1a5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0372a2f54880559dd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0111b9ab5a76e1a5a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.privsub1_route"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03132b13817d9d7391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0372a2f54880559dd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03132b13817d9d739",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.privsub2_route"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privsub1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:route-table/rtb-0111b9ab5a76e1a5a",
            "id": "rtb-0111b9ab5a76e1a5a",
            "owner_id": "368355641188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0372a2f54880559dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-privsub1-route"
            },
            "tags_all": {
              "Name": "ram-privsub1-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privsub2_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:route-table/rtb-03132b13817d9d739",
            "id": "rtb-03132b13817d9d739",
            "owner_id": "368355641188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0372a2f54880559dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-privsub2-route"
            },
            "tags_all": {
              "Name": "ram-privsub2-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubsub1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:route-table/rtb-02e3f49496f2e7e1a",
            "id": "rtb-02e3f49496f2e7e1a",
            "owner_id": "368355641188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07efe9554185d7d9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-pubsub1-route"
            },
            "tags_all": {
              "Name": "ram-pubsub1-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubsub2_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:route-table/rtb-043a707e2634fc581",
            "id": "rtb-043a707e2634fc581",
            "owner_id": "368355641188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07efe9554185d7d9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-pubsub2-route"
            },
            "tags_all": {
              "Name": "ram-pubsub2-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub1_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070c34771dead2b49",
            "route_table_id": "rtb-0111b9ab5a76e1a5a",
            "subnet_id": "subnet-01303053979e7ecfe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privsub1_route",
            "module.vpc.aws_subnet.privsub1",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub2_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a033eb7527e15d88",
            "route_table_id": "rtb-03132b13817d9d739",
            "subnet_id": "subnet-040f0a8fb65e088a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privsub2_route",
            "module.vpc.aws_subnet.privsub2",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub1_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04933cac6d975061d",
            "route_table_id": "rtb-02e3f49496f2e7e1a",
            "subnet_id": "subnet-0bd14aeb7c8fd7fe1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pubsub1_route",
            "module.vpc.aws_subnet.pubsub1",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub2_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c896a8c720199ff",
            "route_table_id": "rtb-043a707e2634fc581",
            "subnet_id": "subnet-017eb917f90efddfa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.pubsub2_route",
            "module.vpc.aws_subnet.pubsub2",
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:subnet/subnet-01303053979e7ecfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01303053979e7ecfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "368355641188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ram-privsub1",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ram-privsub1",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:subnet/subnet-040f0a8fb65e088a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040f0a8fb65e088a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "368355641188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ram-privsub2",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ram-privsub2",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:subnet/subnet-0bd14aeb7c8fd7fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd14aeb7c8fd7fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368355641188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ram-pubsub1",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ram-pubsub1",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:subnet/subnet-017eb917f90efddfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017eb917f90efddfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368355641188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ram-pubsub2",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ram-pubsub2",
              "kubernetes.io/cluster/ram-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c0ee82e4674d1c99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "source_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:368355641188:vpc/vpc-0c0ee82e4674d1c99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068ba741e93bcc046",
            "default_route_table_id": "rtb-03eae192da37cc69a",
            "default_security_group_id": "sg-01bcca3159d2d031a",
            "dhcp_options_id": "dopt-a3dd2ec8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0ee82e4674d1c99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03eae192da37cc69a",
            "owner_id": "368355641188",
            "tags": {
              "Name": "ram-vpc-eks"
            },
            "tags_all": {
              "Name": "ram-vpc-eks"
            }
          }
        }
      ]
    }
  ]
}